--- a/react-test/ClientApp/src/components/Form/Form.css
+++ b/react-test/ClientApp/src/components/Form/Form.css
@@ -1,3 +1,15 @@
 .mySpan {
     color: #E01A76;
 }
+.rounded-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.rounded-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
